--- a/scss/modules/media/_module.scss
+++ b/scss/modules/media/_module.scss
@@ -1,6 +1,7 @@
 // 
 // Media Module
 // ============
+// @import '../../../bower_components/sass-mq/_mq';
 
 // Media Query Settings
 $mq-aspect-ratio: 16/9 !default;
