--- a/scss/modules/layout/_classes.scss
+++ b/scss/modules/layout/_classes.scss
@@ -34,11 +34,11 @@
 }
 
 #{prefixed-class('ratio')} {
-    @extend %ratio;
+    @extend #{component('ratio')};
 }
 
 .ratio {
     @each $ratio in map-keys($ratios) {
-        &-#{$ratio} { @extend %ratio-#{$ratio}; }
+        &-#{$ratio} { @extend #{component('ratio', $ratio)}; }
     }
 }
