--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -37,6 +37,7 @@
     'modules/icons/_module',
     'modules/lists/_module',
     'modules/forms/_module',
+    'modules/input/_module',
     'modules/nav/_module',
     'modules/buttons/_module',
     'modules/labels/_module',
