--- a/scss/modules/forms/_exports.scss
+++ b/scss/modules/forms/_exports.scss
@@ -2,47 +2,7 @@
 // Forms Classes
 // =============
 
-@include export('input') {
-    textarea,
-    input:not([type="radio"]):not([type="checkbox"]):not([type="button"]):not([type="submit"]) {
-    	@extend %input;
-
-        @include style('input');
-
-        &.lighten { @include style('input', 'lighten'); }
-        &.darken { @include style('input', 'darken'); }
-
-    	&.small { @extend %input-small; }
-
-    	&.large { @extend %input-large; }
-
-        &.implicit {
-            @extend %input-implicit;
-
-            @include style('input-implicit');
-        }
-    }
-    
-    input.inline,
-    select.inline,
-    textarea.inline {
-        @extend %input-inline;
-    }
-
-    input.implicit {
-        &[type="radio"] { @extend %radio-implicit; }
-
-        &[type="checkbox"] { @extend %checkbox-implicit; }
-    }
-
-    textarea { @extend %textarea; }
-
-    select { @extend %select; }
-
-    input[type="radio"] { @extend %radio; }
-
-    input[type="checkbox"] { @extend %checkbox; }
-
+@include export('label', 'form') {
     label { 
         @extend %form-label;
 
