--- a/scss/modules/input/_components.scss
+++ b/scss/modules/input/_components.scss
@@ -9,62 +9,51 @@
     border-width: $input-border-width,
     border-style: solid,
     border-radius: false
+)) {
+
+    @include define-variant('small', (
+        type-scale: $input-scale - 1
+    ));
+
+    @include define-variant('large', (
+        type-scale: $input-scale + 1
+    ));
+
+    @include define-variant('inline', (
+        display: inline-block,
+        width: auto,
+    ));
+
+    @include define-variant('implicit', (
+        background-color: transparent,
+        border-width: 0,
+    ));
+
+    @include define-variant('outline', (
+        outline-width: $input-border-width,
+        outline-style: solid,
+    ));
+}
+
+@include define-component('textarea', (
+    height: auto,
+)) {
+    @extend #{component('input')};
+}
+
+@include define-component('search', (
+    -webkit-appearance: none
 ));
 
-@include define-component('foobar', (
-    type-scale: 3
+@include define-component('select', (
+    type-scale: $select-scale,
+    display: block,
+    width: 100%,
+    -webkit-appearance: none,
+    padding: $select-padding,
+    border-width: $select-border-width,
+    border-style: solid,
 ));
-
-.foobar {
-    @include component('foobar');
-}
-
-%input-small {
-    @include type-scale($input-scale - 1);
-}
-
-%input-large {
-    @include type-scale($input-scale + 1);
-}
-
-%input-inline {
-    @extend %inline-block;
-
-    width: auto;
-}
-
-%input-implicit {
-    background-color: transparent;
-    border-width: 0;
-
-    &-outline {
-        outline-width: $input-border-width;
-        outline-style: solid;
-    }
-}
-
-%textarea {
-    @extend %input;
-
-    height: auto;
-}
-
-%input-search {
-    -webkit-appearance: none;
-}
-
-%select {
-    @include type-scale($input-scale);
-    display: block;
-    width: 100%;
-
-    -webkit-appearance: none;
-    padding: 0.5rem;
-    border-width: $input-border-width;
-    border-style: solid;
-    z-index: 2;
-    width: 100%;
-}
 
 %radio {
     margin-right: $radio-margin-right;
