--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -149,4 +149,5 @@ $divider-color: theme-mode($divider-color-light, $divider-color-dark) !default;
 	'_mixins',
 	'_components',
 	'_themes',
-	'_classes';
+	'_exports';
+    
